--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "backend": "json-server --watch ./src/backend/db.json"
   },
   "private": true,
   "dependencies": {
@@ -15,11 +16,16 @@
     "@angular/compiler": "~12.2.0",
     "@angular/core": "~12.2.0",
     "@angular/forms": "~12.2.0",
+    "@angular/localize": "~12.2.0",
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^10.0.0",
+    "bootstrap": "^4.5.0",
     "rxjs": "~6.6.0",
+    "sweetalert2": "^11.3.3",
     "tslib": "^2.3.0",
+    "uid": "^2.0.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
